--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@ group 'com.tech.task'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-
-sourceCompatibility = 1.5
+apply plugin: 'idea'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
+
+    testCompile "junit:junit:4.12"
+    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile "org.easytesting:fest-assert-core:2.0M10"
 }
